--- a/web/backend/package.json
+++ b/web/backend/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@maxmind/geoip2-node": "^4.0.0",
     "body-parser": "^1.20.2",
+    "chart.js": "^3.7.0",
     "cookie-parser": "^1.4.6",
     "csvtojson": "^2.0.10",
     "elasticsearch": "^16.7.3",
@@ -21,7 +22,8 @@
     "moment": "^2.29.4",
     "mysql": "^2.18.1",
     "socket.io": "^4.6.1",
-    "vue": "^3.3.4"
+    "vue": "^3.3.4",
+    "vue-chartjs": "^5.2.0"
   },
   "keywords": [],
   "description": ""
