--- a/web/package.json
+++ b/web/package.json
@@ -1,9 +1,11 @@
 {
   "dependencies": {
     "@popperjs/core": "^2.11.7",
+    "body-parser": "^1.20.2",
     "bootstrap": "^5.2.3",
     "bootstrap-vue-3": "^0.5.1",
     "chart.js": "^4.2.1",
+    "cookie-parser": "^1.4.6",
     "heatmap.js": "^2.0.5",
     "iconv-lite": "^0.6.3",
     "leaflet": "^1.9.3",
