Modify csv field mapping in logstash

--- a/elastic/filebeat/filebeat.yml
+++ b/elastic/filebeat/filebeat.yml
@@ -1,6 +1,7 @@
 filebeat.inputs:
 - type: log
   enabled: true
+  id: json-harvester
   paths:
     - "/var/logs/beats/suricata/*.json"
   tags: ["json", "suricata"]
