--- a/elastic/logstash/pipeline/pip_test.config
+++ b/elastic/logstash/pipeline/pip_test.config
@@ -32,7 +32,7 @@ filter {
   }
   
   mutate {
-    remove_field => ["input", "host", "ecs", "log", "agent", "message"]
+    remove_field => ["input", "host", "ecs", "log", "agent", "message", "event"]
   }
 }
 
